<resources>
    <string name="app_name">my grocery list</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add first item</string>
    <string name="enter_item">Enter Grocery Item</string>
    <string name="hint_item">Enter Grocery</string>
    <string name="quantity_hint">Quantity</string>
    <string name="save_title">SAVE</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="sure">Are you sure???</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
</resources>
