<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <RelativeLayout
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_item"
                android:textSize="18sp"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/groceryItem"
                android:hint="@string/hint_item"
                android:layout_below="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Groceryqty"
                android:layout_below="@id/groceryItem"
                android:layout_marginTop="15dp"
                android:hint="@string/quantity_hint"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Groceryqty"
                android:id="@+id/saveButton"
                android:background="@color/colorAccent"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:text="@string/save_title"
                />
        </RelativeLayout>
        </android.support.v7.widget.CardView>
</LinearLayout>